--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="prev-btn">
                     <i class="fa-regular fa-chevron-left"></i>
                 </button>
-                <button class="prev-btn">
+                <button class="next-btn">
                     <i class="fa-regular fa-chevron-right"></i>
                 </button>
             </div>
